Run-log smoke test in README Quickstart (real Llama-3.2-1B Q4_0)
Captured an end-to-end CLI smoke-test run against the real
Llama-3.2-1B-Instruct-Q4_0 GGUF (auto-loaded from
~/.auratensor/models cache) and dropped a brief run-log block
into README Quick Start between the SSE curl demo (Step 3) and
the Tests & Benchmarks section header.

Run results:
  - wall time: ~30 s end-to-end (load + 10-token prefill + 24-token generate)
  - prompt prefill: 6.30 s (10 tokens)
  - generate: 19.75 s (24 tokens until placeholder EOS break)
  - tok/s: 1.22 (single cold-JIT run; ~2.35 tok/s JMH avg at ctx=128
    on same hardware — explained by JIT cold-start + per-token stdout
    flush overhead, neither of which the bench averages away)

The new block documents two real CLI observations worth surfacing:

1. cli.Main argument parser silently drops unknown flags
   (`default -> { /* ignore unknown */ }`), so users who pass
   `--max-tokens N` get the default maxTokens=128. The actual
   accepted flag is `--tokens`. The README bash block uses
   `--tokens 32` and a Caveats entry points users at
   `printHelp()` for the full flag schema.

2. cli.Main ships a placeholder Tokenizer (`char-mod-30000`
   encode/decode mapping per the inline source) so the engine
   pipeline can be exercised end-to-end without a real tokenizer.
   Emitted characters are non-printable / control bytes. The real
   Llama-3 chat path uses `Llama3BpeTokenizer.fromGguf(gguf)`,
   which is the path consumed by `TokenThroughputBenchmark`’s
   real-model setup; wiring it into cli.Main is a follow-up.

No Java sources touched; README.md is the sole modified file.